force-app/main/default/objects/BulkBillingRampSetting__mdt/BulkBillingRampSetting__mdt.object-meta.xml
<CustomMetadata>
    <label>Bulk Billing Ramp Setting</label>
    <pluralLabel>Bulk Billing Ramp Settings</pluralLabel>
    <fields>
        <fullName>DiscountPercentage__c</fullName>
        <label>Discount Percentage</label>
        <precision>5</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>YearNumber__c</fullName>
        <label>Year Number</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
</CustomMetadata>