force-app/main/default/objects/BulkBillingRampSetting__mdt/fields/DiscountPercentage__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercentage__c</fullName>
    <description>Discount percentage applied for the given year (0 = standard pricing, no discount).</description>
    <label>Discount Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>