force-app/main/default/objects/BulkBillingRampSetting__mdt/fields/EffectiveFromDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveFromDate__c</fullName>
    <description>Date this ramp row becomes effective. Rows with a future date are ignored by the runtime.</description>
    <label>Effective From Date</label>
    <type>Date</type>
</CustomField>