force-app/main/default/objects/BulkBillingRampSetting__mdt/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Product code that this ramp applies to (e.g. BB1). Enables multi-product ramp schedules from a single metadata table.</description>
    <label>Product Code</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>