force-app/main/default/objects/BulkBillingRampSetting__mdt/fields/YearNumber__c.field-meta.xml
<CustomField>
    <fullName>YearNumber__c</fullName>
    <description>Subscription year this ramp tier applies to (1, 2, 3...). Year 3+ rows represent the post-ramp standard period.</description>
    <label>Year Number</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>